Revert "feat: Implement internationalization with intlayer and update layout components"
This reverts commit 694e8f40275f38fd890be2f2db167a8db62c6507.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  //Contine la implementacion de intlayer
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".intlayer/**/*.ts",],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
