--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss-animated": "^2.0.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
