--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@next/env": "^15.2.5",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-icons": "^1.3.2",
@@ -28,6 +29,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-use-measure": "^2.1.7",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animated": "^2.0.0",
     "tw-animate-css": "^1.2.5",
