--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@hookform/resolvers": "^5.0.1",
         "@next/env": "^15.2.5",
+        "@radix-ui/react-accordion": "^1.2.8",
         "@radix-ui/react-aspect-ratio": "^1.1.3",
         "@radix-ui/react-dropdown-menu": "^2.1.7",
         "@radix-ui/react-icons": "^1.3.2",
