--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "prepare": "husky",
         "lint:fix": "eslint \"./**/*.+(ts|tsx)\" --fix",
         "format": "prettier . --write",
-        "format:check": "prettier . --check"
+        "format:check": "prettier . --check",
+        "generate-types": "pnpx tsx  ./src/types/generateTypes.ts"
     },
     "lint-staged": {
         "*.{js,ts,jsx,tsx}": [
@@ -26,25 +27,31 @@
         "@radix-ui/react-dropdown-menu": "^2.1.7",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.3",
+        "@radix-ui/react-popover": "^1.1.11",
         "@radix-ui/react-select": "^2.1.7",
         "@radix-ui/react-separator": "^1.1.3",
         "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-tooltip": "^1.2.3",
+        "@tanstack/react-query": "^5.74.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "embla-carousel": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
+        "inversify": "7.0.0-alpha.5",
         "lucide-react": "^0.487.0",
         "motion": "^12.6.3",
         "next": "15.2.5",
         "next-intl": "^4.0.2",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
+        "react-day-picker": "8.10.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0",
         "react-icons": "^5.5.0",
         "react-use-measure": "^2.1.7",
+        "reflect-metadata": "^0.2.2",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animated": "^2.0.0",
@@ -58,6 +65,7 @@
         "@eslint/js": "9.18.0",
         "@ianvs/prettier-plugin-sort-imports": "4.4.0",
         "@tailwindcss/postcss": "^4",
+        "@tanstack/eslint-plugin-query": "^5.73.3",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
