--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
         "@next/env": "^15.2.5",
         "@radix-ui/react-accordion": "^1.2.8",
         "@radix-ui/react-aspect-ratio": "^1.1.3",
+        "@radix-ui/react-checkbox": "^1.2.3",
+        "@radix-ui/react-dialog": "^1.1.11",
         "@radix-ui/react-dropdown-menu": "^2.1.7",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.3",
         "@radix-ui/react-popover": "^1.1.11",
+        "@radix-ui/react-scroll-area": "^1.2.6",
         "@radix-ui/react-select": "^2.1.7",
         "@radix-ui/react-separator": "^1.1.3",
         "@radix-ui/react-slot": "^1.2.0",
@@ -35,6 +38,7 @@
         "@tanstack/react-query": "^5.74.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "embla-carousel": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
@@ -50,12 +54,14 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0",
         "react-icons": "^5.5.0",
+        "react-phone-number-input": "^3.4.12",
         "react-use-measure": "^2.1.7",
         "reflect-metadata": "^0.2.2",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animated": "^2.0.0",
         "tw-animate-css": "^1.2.5",
+        "webpack": "^5.99.7",
         "zod": "^3.24.2"
     },
     "devDependencies": {
