--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
         "jsx": "preserve",
         "incremental": true,
         "allowArbitraryExtensions": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "plugins": [
             {
                 "name": "next"
