--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "embla-carousel": "^8.6.0",
         "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
+        "input-otp": "^1.4.2",
         "inversify": "7.0.0-alpha.5",
         "lucide-react": "^0.487.0",
         "motion": "^12.6.3",
