--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animated": "^2.0.0",
         "tw-animate-css": "^1.2.5",
+        "vaul": "^1.1.2",
         "webpack": "^5.99.7",
         "zod": "^3.24.2"
     },
