--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-phone-number-input": "^3.4.12",
         "react-use-measure": "^2.1.7",
         "reflect-metadata": "^0.2.2",
+        "socket.io-client": "^4.8.1",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animated": "^2.0.0",
