--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
         "tw-animate-css": "^1.2.5",
         "vaul": "^1.1.2",
         "webpack": "^5.99.7",
-        "zod": "^3.24.2"
+        "zod": "^3.24.2",
+        "framer-motion": "^12.12.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.8.0",
