--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^5.0.1",
+        "@lyracom/embedded-form-glue": "^1.4.2",
         "@next/env": "^15.2.5",
         "@radix-ui/react-accordion": "^1.2.8",
         "@radix-ui/react-aspect-ratio": "^1.1.3",
