--- a/deploy/env.yaml
+++ b/deploy/env.yaml
@@ -1,6 +1,6 @@
 develop:
   landing:
     nonsensitive:
-      PORT: 4100
-      WEB_URL: https://teaminnovation-frontend-develop.acide.win
+      BACKEND_URL: "https://almohada-backend-develop.acide.win/v1"
+      PRUEBA_SERVER: "Hola desde el servidor"
     sensitive: []
