--- a/deploy/Dockerfile.dev
+++ b/deploy/Dockerfile.dev
@@ -31,10 +31,11 @@ COPY tsconfig.json tsconfig.json
 
 ENV NEXT_TELEMETRY_DISABLED=1
 
-ARG NEXT_PUBLIC_WHATSAPP_NUMBER=""
-ENV NEXT_PUBLIC_WHATSAPP_NUMBER=${NEXT_PUBLIC_WHATSAPP_NUMBER}
-ARG NEXT_PUBLIC_BASE_WHATSSAPP_URL="/"
-ENV NEXT_PUBLIC_BASE_WHATSSAPP_URL=${NEXT_PUBLIC_BASE_WHATSSAPP_URL}
+ARG NEXT_PUBLIC_WHATSAPP_NUMBER
+ARG NEXT_PUBLIC_BASE_WHATSSAPP_URL
+ARG NEXT_PUBLIC_WEBSOCKET_URL
+
+
 
 RUN npm i -g pnpm
 RUN pnpm run build
