--- a/deploy/env.yaml
+++ b/deploy/env.yaml
@@ -1,6 +1,6 @@
 develop:
   landing:
     nonsensitive:
-      BACKEND_URL: "https://almohada-backend-develop.acide.win/v1"
+      BACKEND_URL: "http://almohada-backend-develop:4000/v1"
       PRUEBA_SERVER: "Hola desde el servidor"
     sensitive: []
