cd: fix build ref

--- a/+devops/+develop/Jenkinsfile
+++ b/+devops/+develop/Jenkinsfile
@@ -54,7 +54,7 @@ ungrouped:
 							steps {
 								script {
 									withDockerRegistry(credentialsId: "${REGISTRY_CREDENTIALS}") {
-										def image = docker.build("${FULL_REGISTRY_URL}:${BUILD_NUMBER}", "--build-arg NEXT_PUBLIC_WHATSAPP_NUMBER=${NEXT_PUBLIC_WHATSAPP_NUMBER} --build-arg NEXT_PUBLIC_BASE_WHATSSAPP_URL=${NEXT_PUBLIC_BASE_WHATSSAPP_URL} --build-arg NEXT_PUBLIC_WEBSOCKET_URL=${NEXT_PUBLIC_WEBSOCKET_URL} -f +devops/docker/Dockerfile .")
+										def image = docker.build("${FULL_REGISTRY_URL}:${BUILD_REF}", "--build-arg NEXT_PUBLIC_WHATSAPP_NUMBER=${NEXT_PUBLIC_WHATSAPP_NUMBER} --build-arg NEXT_PUBLIC_BASE_WHATSSAPP_URL=${NEXT_PUBLIC_BASE_WHATSSAPP_URL} --build-arg NEXT_PUBLIC_WEBSOCKET_URL=${NEXT_PUBLIC_WEBSOCKET_URL} -f +devops/docker/Dockerfile .")
 										image.push()
 									}
 								}
