fix: corregir formato del número de WhatsApp en Jenkinsfile

--- a/+devops/+production/Jenkinsfile
+++ b/+devops/+production/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
 		PROJECT_SERVICES  = "backend,frontend,landing"
 
 		// Hash for this build
-		NEXT_PUBLIC_WHATSAPP_NUMBER="+51958959958"
+		NEXT_PUBLIC_WHATSAPP_NUMBER="51958959958"
 		NEXT_PUBLIC_BASE_WHATSSAPP_URL="https://api.whatsapp.com/send"
 		NEXT_PUBLIC_WEBSOCKET_URL="https://api.hotelalmohadadelrey.com"
 	}
